--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "identifi",
   "description": "Identifi MEAN.JS",
   "version": "0.0.1",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/identifi/identifi-rails.git"
+  },
+  "bugs" : {
+    "url" : "https://github.com/identifi/identifi-rails/issues"
+  },
   "author": "Identifi Project",
   "engines": {
     "node": "0.10.x",
