--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "crypto-js": "https://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip",
     "bootstrap-sass-official": "~3.3.0",
     "spin.js": "~2.0.1",
-    "angular-spinner": "~0.5.1"
+    "angular-spinner": "~0.5.1",
+    "animate.css": "~3.2.0"
   }
 }
