--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "bootstrap-sass-official": "~3.3.0",
     "spin.js": "~2.0.1",
     "angular-spinner": "~0.5.1",
-    "animate.css": "~3.2.0"
+    "animate.css": "~3.2.0",
+    "jquery": "~2.1.1",
+    "ngInfiniteScroll": "1.0.0"
   }
 }
