--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "forever": "~0.11.0",
     "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-sass": "^0.8.1",
     "helmet": "~0.4.0",
     "lodash": "~2.4.1",
@@ -48,6 +49,7 @@
     "passport-google-oauth": "~0.1.5",
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
+    "passport-persona": "^0.1.7",
     "passport-twitter": "~1.0.2",
     "swig": "~1.4.1"
   },
