Memcached identifi queries

--- a/config/env/development.js.example
+++ b/config/env/development.js.example
@@ -30,6 +30,11 @@ module.exports = {
 		clientSecret: process.env.GITHUB_SECRET || 'APP_SECRET',
 		callbackURL: 'http://localhost:3000/auth/github/callback'
 	},
+	persona: {
+		clientID: process.env.PERSONA_ID || 'APP_ID',
+		clientSecret: process.env.PERSONA_SECRET || 'APP_SECRET',
+		callbackURL: 'http://localhost:3000/auth/persona/callback'
+	},
 	mailer: {
 		from: process.env.MAILER_FROM || 'MAILER_FROM',
 		options: {
