--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "jquery": "~2.1.1",
     "ngInfiniteScroll": "1.0.0",
     "angular-persona": "~1.0.0",
+    "seiyria-bootstrap-slider": "~3.1.0",
     "angular-bootstrap-slider": "~0.0.8"
   }
 }
