Production env, messages offset

--- a/config/env/all.js.example
+++ b/config/env/all.js.example
@@ -24,6 +24,7 @@ module.exports = {
 				'public/lib/jquery/dist/jquery.js',
 				'public/lib/angular/angular.js',
 				'public/lib/angular-resource/angular-resource.js', 
+				'public/lib/angular-route/angular-route.js', 
 				'public/lib/angular-cookies/angular-cookies.js', 
 				'public/lib/angular-animate/angular-animate.js', 
 				'public/lib/angular-touch/angular-touch.js', 
