--- a/config/env/test.js.example
+++ b/config/env/test.js.example
@@ -6,6 +6,16 @@ module.exports = {
 	app: {
 		title: 'Identifi - Test Environment'
 	},
+  identifi: {
+    host: 'localhost',
+    port: 4945,
+    user: 'identifirpc',
+    pass: 'IDENTIFI_RPC_PASS',
+    defaultViewpoint: {
+      type: 'keyID',
+      value: 'LOCAL_NODE_KEYID'
+    }
+  },
 	facebook: {
 		clientID: process.env.FACEBOOK_ID || 'APP_ID',
 		clientSecret: process.env.FACEBOOK_SECRET || 'APP_SECRET',
