--- a/config/env/all.js.example
+++ b/config/env/all.js.example
@@ -3,7 +3,7 @@
 module.exports = {
 	app: {
 		title: 'Identifi',
-		description: 'Address book with trust ratings. Link all your identifiers and profiles, get verified and use the same trusted identity on any site or situation.',
+		description: 'Global address book. Link all your profiles and details, get verified and use the same trusted identity on any site or situation.',
 		keywords: 'identity, trust, reputation, WoT, web of trust'
 	},
 	port: process.env.PORT || 3000,
