--- a/bower.json
+++ b/bower.json
@@ -4,27 +4,27 @@
   "description": "Identifi MEAN.JS",
   "dependencies": {
     "bootstrap": "~3",
-    "angular": "~1.2",
-    "angular-resource": "~1.2",
-    "angular-mocks": "~1.2",
-    "angular-cookies": "~1.2",
-    "angular-animate": "~1.2",
-    "angular-touch": "~1.2",
-    "angular-sanitize": "~1.2",
-    "angular-bootstrap": "~0.11.0",
-    "angular-ui-utils": "~0.1.1",
+    "angular": "~1.4",
+    "angular-resource": "~1.4",
+    "angular-mocks": "~1.4",
+    "angular-cookies": "~1.4",
+    "angular-animate": "~1.4",
+    "angular-touch": "~1.4",
+    "angular-sanitize": "~1.4",
+    "angular-bootstrap": "~0.14.3",
     "angular-ui-router": "~0.2.10",
-    "bootstrap-social": "~4.8.0",
+    "bootstrap-social": "~4.11.0",
     "crypto-js": "https://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip",
     "bootstrap-sass-official": "~3.3.0",
-    "spin.js": "~2.0.1",
-    "angular-spinner": "~0.5.1",
-    "animate.css": "~3.2.0",
+    "spin.js": "~2.3.2",
+    "angular-spinner": "~0.8.0",
+    "animate.css": "~3.5.0",
     "jquery": "~2.1.1",
-    "ngInfiniteScroll": "1.0.0",
-    "angular-persona": "~1.0.0",
-    "seiyria-bootstrap-slider": "~3.1.0",
-    "angular-bootstrap-slider": "~0.0.8",
-    "angular-parallax": "~0.0.1"
+    "ngInfiniteScroll": "1.2.1",
+    "angular-persona": "~1.1.0",
+    "seiyria-bootstrap-slider": "~5.3.3",
+    "angular-bootstrap-slider": "~0.1.21",
+    "angular-parallax": "~0.0.1",
+    "allmighty-autocomplete": "*"
   }
 }
